[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"
license = "GPL-3.0-or-later"

[dependencies]
rstest = "0.26.1"
# anyhow = "1.0.68"                                # error handling
# bytes = "1.3.0"                                    # helps manage buffers
# thiserror = "1.0.38"                               # error handling
# serde = { version = "1.0", features = ["derive"] }
